http://blog.csdn.net/harvic880925/article/details/50995587

--- a/奇淫技巧.md
+++ b/奇淫技巧.md
@@ -39,3 +39,23 @@ getResources().getIdentifier("d" + (i % 11 + 1), "drawable", context.getPackageN
 
 ####**泛型推断**
 ![](./demo/泛型推断.png)
+
+
+####**matrix**
+```
+Matrix matrix = new Matrix();  
+// 生成倒影图  而不是用rotation
+matrix.setScale(1F, -1F);  
+```
+
+####**自定义ViewGroup获取dispatchDraw里的图形方法**
+```
+ @Override
+    protected void dispatchDraw(Canvas canvas) {
+        //canvas 在这里面绘的图才可以在界面显示出来
+        Bitmap  maskBitmap= BitmapUtils.createBitmapAndGcIfNecessary(getWidth(),getHeight());
+        canvas.save();
+        canvas.translate(300,0);
+        super.dispatchDraw(new Canvas(maskBitmap));//这部只是为了 子布局的绘制 绘制在bitmap上
+    }
+```
